--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="glow-container">
-        <h1>To Let You Go</h1>
+        <h1>What you mean to me...</h1>
         <button onclick="nextPage()">Click Here</button>
     </div>
 
