--- a/nextpage.html
+++ b/nextpage.html
@@ -58,10 +58,11 @@
         <h1>To Megha</h1>
         <p>To my good friend Megha, you have always been and hopefully would be my best friend forever. You are the person who pushes me to do things, to be cheerful, and an idol to see how to live life to the fullest and enjoy life. I have always been a very shy and intimidating person; you were the first person whom I truly loved. For the very first time in my life, I felt something like that for someone. Your every problem, big or small, killed me from inside, and I would try my heart out to be able to help you.</p>
         <p>The day you said that it was actually me whom you liked, I was overwhelmed with emotions. That night I didn't say anything as I always feared if I became too open, I might lose you. Maybe I'm immature, and you might find all this very cringe, but I just said whatever came to my mind and opened my heart out.</p>
-        <p>I respect your decision, and to love someone is to let her go. With that said, with a heavy heart, it's all come to an end. May we be in touch forever. You are the first love of my life. I always tried not to lose you ever and to be with you forever, but in life, sometimes we have to let go of things we used to love more than ourselves.</p>
+        <p>You are the first love of my life. I always tried not to lose you ever and to be with you forever,</p>
         <p>You know why you are so special to me? You are the best thing that happened to me. Talking to you would make me forget everything. Hours pass by in seconds, and all my problems get erased by your words.</p>
         <p>Please don't judge my writing skills after reading this. I just wrote whatever came to me and did not account for grammar and sentence formation. Surely it's written at night as:</p>
-        <p>"Nights possess an uncanny ability to serve as a truth serum, unraveling the layers of our guarded hearts. In their quiet solitude, stripped of daylight's distraction, they compel us to confront the unspoken truths, the concealed emotions that lie dormant, rendering the night a silent arbiter of introspection."</></p>
+        <p>"Nights possess an uncanny ability to serve as a truth serum, unraveling the layers of our guarded hearts. In their quiet solitude, stripped of daylight's distraction, they compel us to confront the unspoken truths, the concealed emotions that lie dormant, rendering the night a silent arbiter of introspection."</p>
+        <p>Can you please give me one more chance to just try out the things, just once? Just give it a Shot and then judge whatever happens... Please understand from where I'm saying it. Please, just one more chance...</p>
     </div>
 </body>
 </html>
