--- a/nextpage.html
+++ b/nextpage.html
@@ -61,7 +61,15 @@
         <p>You are the first love of my life. I always tried not to lose you ever and to be with you forever,</p>
         <p>You know why you are so special to me? You are the best thing that happened to me. Talking to you would make me forget everything. Hours pass by in seconds, and all my problems get erased by your words.</p>
         <p>Please don't judge my writing skills after reading this. I just wrote whatever came to me and did not account for grammar and sentence formation. Surely it's written at night as:</p>
+        
         <p>"Nights possess an uncanny ability to serve as a truth serum, unraveling the layers of our guarded hearts. In their quiet solitude, stripped of daylight's distraction, they compel us to confront the unspoken truths, the concealed emotions that lie dormant, rendering the night a silent arbiter of introspection."</p>
+        <p>
+            
+        </p>
+        <p>I know I'm a terrible person, I ignored you a lot that's bad for you and that's terrible for me.</p>
+            <p>I made some mistakes I know that, I also know that I can do better, and I know it's easier to say than done it's a lot of work and I hope I'm not too late everyday every decision is an opportunity....</p>
+           <p> So I'm not asking you to believe me I'm just asking you to give me a chance. I know I may not be able to be the greatest person you know but I know I can do better and I'm telling you right now I promise I'll never stop trying </p>
+
         <p>Can you please give me one more chance to just try out the things, just once? Just give it a Shot and then judge whatever happens...</p>
     </div>
 </body>
