--- a/nextpage.html
+++ b/nextpage.html
@@ -71,6 +71,11 @@
            <p> So I'm not asking you to believe me I'm just asking you to give me a chance. I know I may not be able to be the greatest person you know but I know I can do better and I'm telling you right now I promise I'll never stop trying </p>
 
         <p>Can you please give me one more chance to just try out the things, just once? Just give it a Shot and then judge whatever happens...</p>
+
+        <p>At last I would like to say that whatever may your answere be, but remember my love for you is permanence
+...</p>
+                                                                                                           
+                                                                                                                      <p><em> Kritanta Sasan Roy</p>
     </div>
 </body>
 </html>
