--- a/index.html
+++ b/index.html
@@ -133,13 +133,8 @@
     <!-- Pages remain unchanged -->
     <div class="page">
       <div class="text-container">
-        <p>At last, I would like to say that whatever may your answer be, but remember my love for you is a permanence...</p>
+        <p>At last, I would like to say that whatever may your answer be, but remember my feelings for you is a permanence...</p>
         <p><em>Kritanta Sasan Roy</p>
-      </div>
-    </div>
-    <div class="page">
-      <div class="text-container">
-        <p>Can you please give me one more chance to just try out the things, just once? Just give it a shot and then judge whatever happens...</p>
       </div>
     </div>
     <div class="page">
@@ -159,7 +154,7 @@
     </div>
     <div class="page">
       <div class="text-container">
-        <p>You are the first love of my life. I always tried not to lose you ever and to be with you forever.</p>
+        <p>You are the first one with whome I feel special. I always tried not to lose you ever and to be with you forever.</p>
       </div>
     </div>
     <div class="page">
@@ -169,12 +164,7 @@
     </div>
     <div class="page">
       <div class="text-container">
-        <p>The day you said that it was actually me whom you liked, I was overwhelmed with emotions. That night I couldn't say anything I got blanked out, always feared if I became too open, I might lose you.</p>
-      </div>
-    </div>
-    <div class="page">
-      <div class="text-container">
-        <p>Your every problem, big or small, killed me from inside, and I would my best to help you, put my heart out to be able to help you.</p>
+        <p>Your every problem, big or small, killed me from inside, and I would try my best to help you, put my heart out to be able to help you.</p>
       </div>
     </div>
     <div class="page">
