--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     </div>
     <div class="page">
       <div class="text-container">
-        <p>You know why you are so special to me? You are the best thing that happened to me. Talking to you would make me forget everything. Hours pass by in seconds, and all my problems gets vanished by magical voice.</p>
+        <p>You know why you are so special to me? You are the best thing that happened to me. Talking to you would make me forget everything. Hours passes by in seconds, and all my problems gets vanished by your magical voice.</p>
       </div>
     </div>
     <div class="page">
